--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ body {
 }
 
 @utility masked-img {
-    mask-image: url("/images/mask-img.png");
+    mask-image: url("/images2/cup.png");
     mask-repeat: no-repeat;
     mask-position: center;
     mask-size: 50%;
@@ -270,7 +270,7 @@ body {
                 @apply opacity-0 md:px-0 px-5 space-y-5 absolute md:bottom-5 bottom-52 left-1/2 -translate-x-1/2;
 
                 h3 {
-                    @apply md:text-5xl text-2xl text-center font-serif md:w-full w-80 text-[#e6c7a3];
+                    @apply md:text-5xl text-2xl text-center font-serif md:w-full w-80 text-[#c69c6d];
                 }
 
                 p {
